[project]
name = "deep-learning-with-python-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.6.2",
    "jupyterlab>=4.5.5",
    "keras>=3.12.1",
    "keras-hub>=0.25.1",
    "matplotlib>=3.10.8",
    "pydot>=4.0.1",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
]
